# TgTralnslateBotCPR

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: logic.h
src/: logic.cpp
